--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "connect-mongo": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "express-session": "^1.18.2",
     "pm2": "^6.0.14"
   }
 }
