--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "connect-mongo": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "express-session": "^1.18.2",
+    "googleapis": "^170.1.0",
     "pm2": "^6.0.14"
   }
 }
